--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,7 +1,8 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
+    /*
+     * a basic setup config to run the backend of the server.
+     * Kept in repo for simplicity.
+     */
     "version": "0.2.0",
     "configurations": [
         {
