--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Crinfarr",
   "license": "ISC",
   "dependencies": {
-    "chalk": "^4.1.0"
+    "chalk": "^4.1.0",
+    "node-rsa": "^1.1.1"
   }
 }
