--- a/backend/package.json
+++ b/backend/package.json
@@ -1,15 +1,20 @@
 {
-  "name": "arcthicc",
-  "version": "0.0.1",
+  "name": "ponder-backend",
+  "version": "0.0.3",
   "description": "who knows lmao",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Crinfarr",
-  "license": "ISC",
+  "license": "GPL-3.0",
   "dependencies": {
     "chalk": "^4.1.0",
     "node-rsa": "^1.1.1"
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "github.com/REDBOT-LABS/Ponder"
   }
 }
